K8s/micro-services/metrics-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metrics-ingress
  namespace: metrics
  annotations:
    konghq.com/plugins: key-auth  # <--- CAMBIATO: da jwt-auth a key-auth
spec:
  ingressClassName: kong
  rules:
    - host: metrics.192.168.58.2.nip.io # NOTA: Verifica IP
      http:
        paths:
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: metrics-service
                port:
                  number: 5001
