K8s/micro-services/producer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: producer-ingress
  namespace: kafka
  annotations:
    # --- PLUGIN BINDING ---
    # Collega questo Ingress al plugin 'key-auth' configurato in 'K8s/auth-apikey/apikey-plugin-kafka.yaml'.
    # Ogni richiesta che passa di qui dovrà avere un header 'apikey' valido.
    konghq.com/plugins: key-auth
spec:
  ingressClassName: kong                # Delega la gestione a Kong Ingress Controller
  rules:
  - host: producer.192.168.58.2.nip.io  # NOTA: Assicurati che l'IP sia quello del tuo minikube ip
    http:
      paths:
        - path: /event                  # Instrada tutte le richieste che iniziano per /event
          pathType: Prefix
          backend:
            service:
              name: producer-service    # Forward verso il Service definito nel deployment
              port:
                number: 5000
